# LLM-Economist

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  setup.py
examples/: __init__.py  advanced_usage.py  quick_start.py
experiments/: __init__.py  run_experiments.py
llm_economist/: __init__.py  main.py
llm_economist/agents/: __init__.py  llm_agent.py  planner.py  worker.py
llm_economist/data/: __init__.py  occupation_detailed_summary.csv
llm_economist/models/: __init__.py  base.py  gemini_model.py  openai_model.py  openrouter_model.py  vllm_model.py
llm_economist/utils/: __init__.py  bracket.py  common.py
tests/: __init__.py  test_advanced_usage.py  test_models.py  test_quickstart.py  test_simulation.py
